--- a/src/elsie.common/templates/action-bar.jade
+++ b/src/elsie.common/templates/action-bar.jade
@@ -6,6 +6,7 @@ md-toolbar(ng-class="{ 'md-theme-search' : search }",class="action-bar {{ theme 
       md-icon arrow_back
     h2(ng-class="{ visible: set.title }",ng-hide="search")
       span(ng-if="set.title") {{ set.title }}
+    img.elsie-logo.md-avatar(ng-class="{ visible: set.logo }",src="img/logo_white.png")
     md-button.md-icon-button.right-button.right-button-2(ng-click="go('watchlist')", ng-class="{ visible: set.locating }")
       md-icon location_searching
     md-button.md-icon-button.right-button(ng-click="go('watchlist')", ng-class="{ visible: set.watchlist }")
