--- a/src/elsie.splash/styles/splash.scss
+++ b/src/elsie.splash/styles/splash.scss
@@ -22,16 +22,14 @@
     }
   }
   .logo {
-    width: 40%;
+    width: 55%;
     margin: 0 auto;
     outline: none;
   }
   &.welcome {
-    background: #5ee0d1; /* Old browsers */
-    background: -moz-radial-gradient(center, ellipse cover,  #5ee0d1 16%, #39c0b3 100%); /* FF3.6-15 */
-    background: -webkit-radial-gradient(center, ellipse cover,  #5ee0d1 16%,#39c0b3 100%); /* Chrome10-25,Safari5.1-6 */
-    background: radial-gradient(ellipse at center,  #5ee0d1 16%,#39c0b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5ee0d1', endColorstr='#39c0b3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background-image: url('../img/splash.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     .container {
       text-align: center;
       position: relative;
@@ -43,9 +41,8 @@
     .buttons {
       width: 100%;
       button.md-button {
-        width: 50%;
-        color: white;
-        border: 1px solid white;
+        border: none;
+        box-shadow: none;
       }
     }
   }
@@ -57,6 +54,8 @@
     button.md-button {
       margin-left: 3px;
       margin-right: 3px;
+      border: none;
+      box-shadow: none;
     }
   }
 }
