update: start product overhaul

--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -7,11 +7,41 @@ doctype
   md-button.md-fab(aria-label="Add to Watchlist",ng-click="toggleWatch(product)")
     md-icon(ng-if="isWatched") favorite
     md-icon(ng-if="!isWatched") favorite_border
-  md-button.md-icon-button.md-raised(aria-label="Search for Stores",ng-click="findNearby(product)",ng-disabled="storesLoading",ng-class="{ 'md-primary' : mode === 'stores' }")
+  //md-button.md-icon-button.md-raised(aria-label="Search for Stores",ng-click="findNearby(product)",ng-disabled="storesLoading",ng-class="{ 'md-primary' : mode === 'stores' }")
     md-icon(ng-show="!storesLoading") store
     md-progress-circular(md-mode="indeterminate",ng-show="storesLoading",md-diameter="24")
-  md-content.lower.md-default.md-primary-bg
-    md-list(ng-show="mode === 'detail'")
+  md-content.lower.md-default.md-primary-bg(ng-style="content")
+    div(flex="row",layout-wrap)
+      .head(flex="80",flex-offset="10")
+        h3.title.black.light {{ product.name }}
+        h5.title.grey.light {{ product.producer_name }}
+        md-chip.md-accent(ng-show="isPick(product)") kwäf pick
+      div(flex="90",flex-offset="5",layout="row")
+        md-list(flex="50")
+          md-list-item.md-2-line(ng-if="product.varietal")
+            img.md-avatar(src="img/icon_varietal.png")
+            .md-list-item-text
+              h3 {{ product.varietal }}
+              p Type
+          md-list-item.md-2-line(ng-if="product.price_in_cents")
+            img.md-avatar(src="img/icon_price.png")
+            .md-list-item-text
+              h3 {{ product.price_in_cents / 100 | currency : $ : 2  }}
+              p Price
+        md-list(flex="50")
+          md-list-item.md-2-line(ng-if="product.product_no")
+            img.md-avatar(src="img/icon_number.png")
+            .md-list-item-text
+              h3 {{ product.product_no  }}
+              p Product No.
+          md-list-item.md-2-line(ng-if="product.package")
+            img.md-avatar(src="img/icon_package.png")
+            .md-list-item-text
+              h3 
+                span(ng-if="product.total_package_units > 1") {{ product.total_package_units }}x
+                span {{ product.package_unit_volume_in_milliliters  }}ml
+              p Package
+    //md-list(ng-show="mode === 'detail'")
       md-list-item.md-2-line(ng-if="product.varietal")
         .md-list-item-text
           h3 {{ product.varietal }}
@@ -52,14 +82,10 @@ doctype
           small.grey
             | Review &amp; pairing data provided by kwäf: only good wine. Visit them at&nbsp;
             a(href="http://kwaf.ca",target="_blank") kwaf.ca
-      //- md-divider(ng-if="product.description && tags || product.pick.tastingNote && tags")
-      //- md-list-item
-      //-   md-chips.md-accent(ng-model="tags",readonly="true")
-    md-list(ng-show="mode === 'stores'")
+    //md-list(ng-show="mode === 'stores'")
       md-list-item.md-2-line(ng-repeat="store in product.stores",ng-click="loadStore(store)")
-        //img.md-avatar(ng-src="{{ product.image_thumb_url }}")
         .md-list-item-text
           h3 {{ store.name }}
           p {{ store.quantity }} units, {{ store.distance_in_meters | distance }} away
-.kwaf-ribbon(ng-if="isPick(product)")
+//.kwaf-ribbon(ng-if="isPick(product)")
   span kwäf pick
