--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -3,7 +3,7 @@
   background-size: auto 70%;
   background-repeat: no-repeat;
   background-position-x: center;
-  background-position-y: bottom;
+  background-position-y: -220%;
   position: absolute;
   top: $bump;
   left: 0;
@@ -52,7 +52,30 @@
     background-color: transparent;
   }
   md-content.lower {
-    min-height: 100%;
+    height: 100%;
+    .head {
+      margin-top: 30px;
+      h3.title,
+      h5.title {
+        margin: 10px 0;
+      }
+    }
+    md-list {
+      md-list-item {
+        padding: 0 8px;
+        &:first-child {
+          border-top: 1px $grey solid;
+          padding-top: 10px;
+        }
+        &:last-child {
+          border-bottom: 1px $grey solid;
+          padding-bottom: 10px;
+        }
+        img.md-avatar {
+          margin-right: 10px;
+        }
+      }
+    }
     md-list-item.long {
       padding: 16px;
     }
