--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -10,13 +10,13 @@ doctype
   //md-button.md-icon-button.md-raised(aria-label="Search for Stores",ng-click="findNearby(product)",ng-disabled="storesLoading",ng-class="{ 'md-primary' : mode === 'stores' }")
     md-icon(ng-show="!storesLoading") store
     md-progress-circular(md-mode="indeterminate",ng-show="storesLoading",md-diameter="24")
-  md-content.lower.md-default.md-primary-bg(ng-style="content")
+  md-content.lower.md-default.md-primary-bg
     div(flex="row",layout-wrap)
       .head(flex="80",flex-offset="10")
         h3.title.black.light {{ product.name }}
         h5.title.grey.light {{ product.producer_name }}
         md-chip.md-accent(ng-show="isPick(product)") kwäf pick
-      div(flex="90",flex-offset="5",layout="row")
+      div(flex="90",flex-offset="5",layout="row",layout-wrap)
         md-list(flex="50")
           md-list-item.md-2-line(ng-if="product.varietal")
             img.md-avatar(src="img/icon_varietal.png")
@@ -41,6 +41,44 @@ doctype
                 span(ng-if="product.total_package_units > 1") {{ product.total_package_units }}x
                 span {{ product.package_unit_volume_in_milliliters  }}ml
               p Package
+        md-list(flex="100")
+          md-list-item
+            .md-list-item-text
+              h3 Nearest Stocked Location
+          md-progress-circular.md-accent(md-mode="indeterminate",ng-show="storesLoading")
+          md-list-item.no-button-pad.md-3-line(ng-show="!storesLoading",ng-click="loadStore(product.stores[0])")
+            .md-list-item-text
+              h3 {{ product.stores[0].name }}
+              p 
+                span {{ product.stores[0].address_line_1 }}
+                br
+                span {{ product.stores[0].distance_in_meters | distance }}
+        md-list(flex="100",ng-if="product.tasting_note")
+          md-list-item.md-3-line.long
+            .md-list-item-text
+              h3 Tasting Note
+              p {{ product.tasting_note }}
+        md-divider(ng-if="product.pick.whyDrink")
+        md-list(flex="100",ng-if="isPick(product)")
+          md-list-item.md-3-line.long
+            .md-list-item-text
+              h3 {{ product.pick.reviewer }}
+              h4.pink Sommelier at kwäf
+              span.rating
+                md-icon.material-icons.md-default-theme.md-accent(ng-repeat="star in getRating(product.pick.rating) track by $index") star_rate
+              p {{ product.pick.whyDrink }}
+            img.md-avatar(ng-src="{{ product.pick.reviewerPhoto }}")
+        md-list(flex="100",ng-if="isPick(product)")
+          md-list-item.md-3-line.long
+            .md-list-item-text
+              h4.pink Pairing
+              p {{ product.pick.pairsWith }}
+        md-list(flex="100",ng-if="isPick(product)")
+          md-list-item.md-2-line
+            .md-list-item-text
+              small.grey
+                | Review &amp; pairing data provided by kwäf: only good wine. Visit them at&nbsp;
+                a(href="http://kwaf.ca",target="_blank") kwaf.ca
     //md-list(ng-show="mode === 'detail'")
       md-list-item.md-2-line(ng-if="product.varietal")
         .md-list-item-text
