--- a/src/elsie.home/styles/home.scss
+++ b/src/elsie.home/styles/home.scss
@@ -1,10 +1,6 @@
 .home {
   padding-top: $bump;
-  background: $purple; /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover,  #5ee0d1 16%, #39c0b3 100%); /* FF3.6-15 */
-  background: -webkit-radial-gradient(center, ellipse cover,  #5ee0d1 16%,#39c0b3 100%); /* Chrome10-25,Safari5.1-6 */
-  background: radial-gradient(ellipse at center,  #5ee0d1 16%,#39c0b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5ee0d1', endColorstr='#39c0b3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background: $purple;
   width: 100%;
   height: 100%;
   overflow: visible;
