--- a/src/elsie.store/templates/store.jade
+++ b/src/elsie.store/templates/store.jade
@@ -1,26 +1,68 @@
 doctype
-.store.single(ng-style="image")
+.product.store.single.overflow-parent(ng-style="image")
   md-content.upper
     .image
     md-toolbar.lower
       .md-toolbar-tools
-        h2.md-title.white {{ store.name }}
-        h5.md-subhead.white {{ store.address_line_1 }}
+  md-button.md-fab(aria-label="Add to Watchlist",ng-click="makeHome(store)")
+    md-icon home
   md-content.lower.md-default.md-primary-bg
-    md-list
-      md-list-item.md-2-line
-        .md-list-item-text
-          h3 {{ store.address_line_1  }}
-          p address
-      md-list-item.md-2-line
-        .md-list-item-text
-          h3 {{ store.store_no }}
-          p store number
-      md-list-item.md-2-line
-        .md-list-item-text
-          h3 {{ store.telephone }}
-          p phone
-      md-list-item.md-2-line
-        .md-list-item-text
-          h3 {{ store.has_wheelchair_accessability }}
-          p wheelchair accessible
+    div(flex="row",layout-wrap)
+      .head(flex="80",flex-offset="10")
+        h3.title.black.light {{ store.name }}
+        h5.title.grey.light {{ store.address_line_1 }}
+        md-chips
+          md-chip.md-accent Open
+      md-list(flex="90",flex-offset="5")
+        md-list-item.md-3-line
+          img.md-avatar(src="img/icon_location.png")
+          .md-list-item-text
+            h3 Directions
+            p
+              span {{ store.address_line_1 }}
+              br
+              span {{ store.city }}, Ontario {{ store.postal_code }}
+        md-list-item.md-2-line
+          img.md-avatar(src="img/icon_phone.png")
+          .md-list-item-text
+            h3 {{ store.telephone }}
+            p Phone number
+      md-list(flex="90",flex-offset="5")
+        md-list-item.md-3-line.long
+          .md-list-item-text
+            h3 Hours
+            div(layout="row")
+              div(flex="50")
+                p Monday
+              div(flex="50",layout-align="right center")
+                p {{ store.monday_open | prettyHour }} - {{ store.monday_close | prettyHour }}
+            div(layout="row")
+              div(flex="50")
+                p Tuesday
+              div(flex="50",layout-align="right center")
+                p {{ store.tuesday_open | prettyHour }} - {{ store.tuesday_close | prettyHour }}
+            div(layout="row")
+              div(flex="50")
+                p Wednesday
+              div(flex="50",layout-align="right center")
+                p {{ store.wednesday_open | prettyHour }} - {{ store.wednesday_close | prettyHour }}
+            div(layout="row")
+              div(flex="50")
+                p Thursday
+              div(flex="50",layout-align="right center")
+                p {{ store.thursday_open | prettyHour }} - {{ store.thursday_close | prettyHour }}
+            div(layout="row")
+              div(flex="50")
+                p Friday
+              div(flex="50",layout-align="right center")
+                p {{ store.friday_open | prettyHour }} - {{ store.friday_close | prettyHour }}
+            div(layout="row")
+              div(flex="50")
+                p Saturday
+              div(flex="50",layout-align="right center")
+                p {{ store.saturday_open | prettyHour }} - {{ store.saturday_close | prettyHour }}
+            div(layout="row")
+              div(flex="50")
+                p Sunday
+              div(flex="50",layout-align="right center")
+                p {{ store.sunday_open | prettyHour }} - {{ store.sunday_close | prettyHour }}
