--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -2,18 +2,19 @@ doctype
 .home
   md-content(layout="row",layout-wrap,ng-class="{ locked: locked }")
     .search(layout="column",layout-align="center center",ng-class="{ expanded: query, focused: focused }",flex="100")
-      h2.white(ng-if="!query") {{ welcome }}
-      input(type="text",placeholder="Search products and LCBO locations",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }",ng-focus="focused = true",ng-blur="focused = false")
-      md-button.md-icon-button.hide(ng-class="{ visible: query }",ng-click="clear()")
-        md-icon close
-      h5.light.hint.white(ng-if="!query") Try "Gooderham &amp; Worts" or "Saison"
-      //.explore-trigger(ng-if="!picksMode",ng-click="showPicks()")
-        small.white Need some inspiration?
-        br
-        md-icon.swipe-down.white keyboard_arrow_down
+      .main(flex="80",layout="column",layout-align="center center")
+        h2.white(ng-if="!query") {{ welcome }}
+        input(type="text",placeholder="Search products and LCBO locations",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }",ng-focus="focused = true",ng-blur="focused = false")
+        md-button.md-icon-button.hide(ng-class="{ visible: query }",ng-click="clear()")
+          md-icon close
+        h5.light.hint.white(ng-if="!query") Try "Pinot Noir" or "Saison"
+      .explore-trigger(flex="10",flex-offset="5",ng-if="!query")
+        h4.white Let us help you get started
+        md-icon.white keyboard_arrow_down
     .results(ng-if="query",layout-fill)
       md-content(flex="100")
-        md-list
+        md-progress-linear.md-accent(md-mode="indeterminate",ng-show="searching")
+        md-list(ng-show="!searching")
           md-list-item.md-2-line(ng-repeat="product in results.products",ng-click="selectProduct(product)")
             img.md-avatar(ng-src="{{ product.image_thumb_url }}")
             .md-list-item-text
@@ -22,16 +23,17 @@ doctype
                 span.kwaf-pick(ng-show="product.pick.rating") kwäf
                 span {{ product.producer_name }}
     .explore(flex="100")
-      md-card.folded(ng-class="{ 'unfolded' : picks.length > 0 }")
-        md-card-content
-          h4.card-title Top wine picks from kwäf
-          md-list
-            md-list-item.md-2-line(ng-repeat="product in picks",ng-click="selectProduct(product)")
-              img.md-avatar(ng-src="{{ product.image_thumb_url }}")
-              .md-list-item-text
-                h3 {{ product.name }}
-                p {{ product.producer_name }}
-              .stat
-                h2.light.pink {{ product.pick.rating }}
-                //md-icon star_rate
-                small.pink Stars
+      .fancy-title
+        img(src="img/icon_circle_wine.png")
+        h4.md-accent.centered Latest kwäf wine picks
+      md-list.standalone
+        md-list-item.md-2-line(ng-repeat="product in picks",ng-click="selectProduct(product)")
+          img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+          .md-list-item-text
+            h3 {{ product.name }}
+            p {{ product.producer_name }}
+            small {{ product.product_no }} &#183; {{ product.secondary_category }} &#183; {{ product.alcohol_content | percentage }}
+          .stat
+            h2.light.pink {{ product.pick.rating }}
+            //md-icon star_rate
+            small.pink Stars
