--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -62,8 +62,22 @@ small {
     color: $pink;
   }
   &.upcase {
+    text-transform: uppercase;
     margin: 10px 20px;
     font-size: 0.9em;
+  }
+  &.centered {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+p {
+  &.message {
+    color: $pink;
+    font-size: 1em;
+    text-align: center;
+    padding: 0 80px;
   }
 }
 
@@ -77,6 +91,10 @@ a:visited {
 .upcase {
   text-transform: uppercase;
   font-weight: 400;
+}
+
+.full {
+  height: 100%;
 }
 
 #main {
@@ -97,6 +115,15 @@ a:visited {
   right: 0;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.fancy-title {
+  text-align: center;
+  img {
+    width: 70px;
+    display: block;
+    margin: 40px auto 20px;
+  }
 }
 
 .center {
@@ -134,6 +161,10 @@ button.md-button {
       color: $purple;
     }
   }
+  &.facebook {
+    background-color: #3B5998 !important;
+    color: white;
+  }
 }
 
 md-icon.md-default-theme {
@@ -143,6 +174,27 @@ md-icon.md-default-theme {
   }
   &.md-accent {
     color: $pink;
+  }
+}
+
+md-list.standalone {
+  margin-top: 1em;
+  background-color: none;
+  md-list-item {
+    margin: 10px;
+    box-shadow: 0px 3px 0 rgba(0, 0, 0, 0.12);
+    background-color: white;
+    border-radius: 4px;
+    > .md-avatar {
+      height: auto;
+    }
+    .md-list-item-text {
+      padding: 10px 0;
+      small {
+        margin-top: -5px;
+        color: $grey;
+      }
+    }
   }
 }
 
@@ -250,7 +302,6 @@ md-chips {
     md-chip {
       &.md-accent {
         margin-top: 0;
-        text-transform: uppercase;
         font-size: 0.8em;
         line-height: 2em;
         height: auto;
