--- a/src/elsie.home/styles/watchlist.scss
+++ b/src/elsie.home/styles/watchlist.scss
@@ -3,6 +3,10 @@
   padding-top: 56px;
   width: 100%;
   height: 100%;
+  .watchlist-image {
+    width: 40%;
+    margin: 20px 0;
+  }
   &.grid .product {
     background-size: cover;
     background-color: white;
@@ -11,19 +15,6 @@
   > md-content {
     height: 100%;
     background-color: $cream;
-  }
-  md-list {
-    margin-top: 1em;
-    background-color: none;
-    md-list-item {
-      margin: 10px;
-      box-shadow: $box-shadow;
-      background-color: white;
-      border-radius: 5px;
-      > .md-avatar {
-        height: auto;
-      }
-    }
   }
   md-progress-circular {
     margin: 40px auto 0;
