--- a/src/elsie.splash/templates/login.jade
+++ b/src/elsie.splash/templates/login.jade
@@ -6,5 +6,6 @@
     md-input-container.md-primary(flex="70",flex-offset="15")
       label Password
       input(type="password",ng-model="user.password")
-    div(flex="100",layout="row",layout-align="center center")
+    div(flex="100",layout="row",layout-align="center center",layout-wrap)
       md-button.md-primary.md-raised(ng-click="login()",flex="70") Log in
+      md-button.md-accent(ng-click="go('signup')",flex="70") No account? Sign up
