--- a/src/elsie.common/templates/side-bar.jade
+++ b/src/elsie.common/templates/side-bar.jade
@@ -1,12 +1,22 @@
 div
   md-toolbar.md-default-theme
-    .md-toolbar-tools
+    .md-toolbar-tools(ng-show="!session")
+      h2.white Hey there.
+    .md-toolbar-tools(ng-show="session")
+      img.user-image(ng-src="{{ user.avatarUrl }}",ng-if="user.avatarUrl")
       h2.white {{ user.firstName }} {{ user.lastName }}
   md-content(layout-padding)
     md-list
-      md-list-item.md-with-secondary(md-ink-ripple)
+      md-list-item.md-with-secondary(md-ink-ripple,ng-show="session")
         md-icon settings
         p.black Settings
-      md-list-item.md-with-secondary(md-ink-ripple,ng-click="logout()")
+      md-list-item.md-with-secondary(md-ink-ripple,ng-click="go('welcome')",ng-show="!session")
+        md-icon account_circle
+        p.black Sign in
+      md-list-item.md-with-secondary(md-ink-ripple,ng-click="logout()",ng-show="session")
         md-icon power_settings_new
         p.black Log out
+      md-divider
+      md-list-item.md-with-secondary(md-ink-ripple)
+        md-icon info
+        p.black About
