--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -54,32 +54,51 @@
   md-content.lower {
     min-height: 100%;
     .head {
-      margin-top: 30px;
-      h3.title,
+      padding: 20px 5px;
+      h2.title,
       h5.title {
+        line-height: 0.95em;
         margin: 10px 0;
       }
     }
+    .map {
+      width: 100%;
+      height: 132px;
+      background-size: 100%;
+    }
     md-list {
-      margin-top: 10px;
       border-top: 1px $grey solid;
+      padding: 20px 5px;
+      &.flex-50 {
+        md-list-item {
+          padding: 0;
+          .md-list-item-text {
+            margin: 12px 0;
+            h3 {
+              margin-bottom: 1px;
+            }
+          }
+        }
+      }
+      h4 {
+        margin: 0 0 10px 0;
+      }
       md-list-item {
-        padding: 0 8px;
+        padding: 0;
+        min-height: 0;
         img.md-avatar {
           margin-right: 10px;
         }
-      }
-    }
-    md-list-item {
-      > button.md-button {
-        padding: 0;
-        border-radius: 0;
-      }
-    }
-    md-list-item.long {
-      padding: 16px 8px;
-      h3 {
-        margin-bottom: 10px;
+        > button.md-button {
+          padding: 0;
+          border-radius: 0;
+        }
+        .md-list-item-text {
+          margin: 0;
+          h3 {
+            margin-bottom: 10px;
+          }
+        }
       }
     }
     .rating {
